--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -31,14 +31,20 @@ button:hover {
     font-weight: 600;
 }
 .filters h3 {
-    margin-left: 3rem;
+    margin-left: 15%;
     margin-bottom: 0;
     font-weight: 600;
 }
 .filters h4 {
+    margin-left: 15%;
     margin-top: 0;
     font-weight: 400;
     font-size: 14px;
+    height: 20px;
+    width: 80%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .locations {
     height: 100%;
@@ -70,19 +76,23 @@ button:hover {
 .amenities .popover {
     padding: 10px 0;
     margin-left: -5px;
-    margin-top: 0%;
+    margin-top: -5px;
+}
+
+.state_input, .city_input {
+    margin-right: 10px;
+}
+
+.amenities .popover ul li input {
+    margin: 0 10px;
 }
 
 .amenities .popover ul{
     margin: 0px;
 }
 
-.amenities .popover li input{
-    margin-left: 10px;
-}
-
 .locations .popover {
-    margin-top: 0%;
+    margin-top: -5px;
 }
 .popover ul {
     list-style-type: none;
@@ -103,28 +113,4 @@ button:hover {
 .amenities:hover .popover,
 .locations:hover .popover {
     visibility: visible;
-}
-
-
-.amenities .content-text{
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    height: 2rem;
-    width: 16rem;
-    padding-left: 3rem;
-}
-
-
-.locations h6{
-    margin:0rem;
-    padding-left: 1rem;
-    line-height:1 rem;
-}
-
-.locations .show-text{
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    height:2rem;
 }
