--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,28 +1,26 @@
 header {
+    display: flex;
     background: white;
     height: 70px;
     width: 100%;
-    border-bottom: 1px solid #CCCCCC;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #CCCCCC;
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
-    left: 20px;
+    margin-left: 20px;
+    width: 95%;
     height: 100%;
-    width:300px;
 }
 
-
-#api_status{
-    background-color: #ccc;
-    height: 40px;
+#api_status {
     width: 40px;
+    height: 40px;
     margin-right: 30px;
-    border-radius: 50px;
+    border-radius: 100%;
+    background-color: #cccccc;
 }
 
-.available{
-    background-color:#ff545f !important;
+#api_status.available {
+    background-color: #ff545f;
 }
