--- a/web_dynamic/templates/3-hbnb.html
+++ b/web_dynamic/templates/3-hbnb.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css?{{ cache_id }}" />
-    <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css?{{ cache_id }}" />
-    <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css?{{ cache_id }}" />
-    <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?{{ cache_id }}" />
-    <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}" />
-    <link rel="icon" href="../static/images/icon.png?{{ cache_id }}" />
-    <SCRIPT src="https://code.jquery.com/jquery-3.2.1.min.js"></SCRIPT>
-    <SCRIPT src="../static/scripts/3-hbnb.js?{{ cache_id }}"></SCRIPT>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css?{{ cache_id }}">
+    <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css?{{ cache_id }}">
+    <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css?{{ cache_id }}">
+    <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?{{ cache_id }}">
+    <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}">
+    <link rel="icon" href="../static/images/icon.png" />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="/static/scripts/3-hbnb.js?{{ cache_id }}"></script>
     <title>HBnB</title>
   </head>
   <body>
@@ -39,13 +39,13 @@
 	</div>
 	<div class="amenities">
 	  <h3>Amenities</h3>
-	  <div class="content-text">
-	    <h4>&nbsp;</h4>
-	  </div>
+	  <h4>&nbsp;</h4>
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li><INPUT type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">{{ amenity.name }}</li>
+	      <li> <input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">
+		{{ amenity.name }}
+	      </li>
 	      {% endfor %}
 	    </ul>
 	  </div>
@@ -54,7 +54,7 @@
       </section>
       <div class="placesh1"><h1>Places</h1></div>
       <section class="places">
-	
+	<!-- <h1>Places</h1> -->
       </section>
     </div>
     <footer>
